[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/general_ui.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/ingame_button.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/button_reminders.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/ad_indicator.png" type="Texture" id=4]

[node name="Button" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -40.0
margin_top = -41.0
margin_right = 41.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reminder" type="Sprite" parent="."]
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 3 )
hframes = 8
vframes = 4
frame = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4

[node name="Ad" type="Sprite" parent="."]
position = Vector2( -43, -35 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
